infra/k8s-production/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.com
      http:
        paths:
          - path: "/api/v1/auth"
            pathType: Prefix
            backend:
              service:
                name: ticketing-auth-srv
                port:
                  number: 6000
          - path: "/api/v1/tickets"
            pathType: Prefix
            backend:
              service:
                name: ticketing-tickets-srv
                port:
                  number: 6000
          - path: "/api/v1/orders"
            pathType: Prefix
            backend:
              service:
                name: ticketing-orders-srv
                port:
                  number: 6000
          - path: "/api/v1/payments"
            pathType: Prefix
            backend:
              service:
                name: ticketing-payments-srv
                port:
                  number: 6000
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ticketing-client-srv
                port:
                  number: 3000
